--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -6,7 +6,14 @@
     <div class="panel-body">
 
         <div class="row" >
+                      
             <div class="col-md-12">
+                             <span style="
+                              font-size: 12px;
+                              font-weight: 700;
+                              color: #bbb;
+                              text-transform: uppercase;
+                              letter-spacing: 1px;">Datový zdroj</span> 
                 <form novalidate class="form-horizontal" ng-submit="save()" name="form"  >
                     <div class="col-md-4">
 
@@ -35,7 +42,7 @@
                             <label class="control-label col-sm-3"  for="description">description</label>
                             <div class="col-sm-9">
                                 <div show-inter="description"  class="alert alert-danger " ><error-message error="description" ></error-message>  </div> 
-                             
+
                                 <input class="input-sm form-control" type="text" id = "description" name="description" ng-model="DataSource.description"  interpol-model="description" server-error="description"/>
 
                             </div>
@@ -58,14 +65,31 @@
                         </div>
                     </div>
                     <div class="row  col-lg-12" >
-                        <h3>Sloupce</h3>
-                        <table class="table table-condensed table-bordered" style="margin-bottom: 0px">
+                        <span style="
+                              font-size: 12px;
+                              font-weight: 700;
+                              color: #bbb;
+                              text-transform: uppercase;
+                              letter-spacing: 1px;">Sloupce</span>    
+
+                        <table class="table" style="width: 50%" >
                             <thead>
-                            <th ng-repeat="f in DataSource.dataStructure.dataStructureFields" class="form-group  has-warning has-feedback">
-                            <div show-inter="dataStructure.dataStructureFields[{{f.index}}].name"  class="alert alert-danger " ><error-message error="dataStructure.dataStructureFields[{{f.index}}].name" ></error-message>  </div> 
-                            <input interpol-model  server-error = "dataStructure.dataStructureFields[{{f.index}}].name"  class="form-control input-sm" type="text" id = "dataStructure.dataStructureFields[{{f.index}}].name" name="dataStructure.dataStructureFields[{{f.index}}].name" ng-model="f.name" />
-                            </th>
+                                <tr>
+                                    <th class="col-lg-6">Název</th>
+                                    <th class="col-lg-6">Typ</th>
+                                </tr>
                             </thead>
+                            <tbody ng-repeat="f in DataSource.dataStructure.dataStructureFields" >
+                                <tr >
+                                    <td class="form-group  has-warning has-feedback">
+                                        <div show-inter="dataStructure.dataStructureFields[{{f.index}}].name"  class="alert alert-danger " ><error-message error="dataStructure.dataStructureFields[{{f.index}}].name" ></error-message>  </div> 
+                                        <input interpol-model  server-error = "dataStructure.dataStructureFields[{{f.index}}].name"  class="form-control input-sm" type="text" id = "dataStructure.dataStructureFields[{{f.index}}].name" name="dataStructure.dataStructureFields[{{f.index}}].name" ng-model="f.name" />
+                                    </td>
+                                    <td>
+                                        {{f.dataType}}
+                                    </td>
+                                </tr>
+                            </tbody>
                         </table>
 
                     </div>
@@ -73,22 +97,22 @@
             </div>
         </div>
 
-        <div class="row  col-lg-12" ng-controller="DataSourceRowsListCtrl" style="margin-top: 1em;">
+        <div class="row  col-lg-12" style="margin-top: 1em;">
+            <span style="
+                  font-size: 12px;
+                  font-weight: 700;
+                  color: #bbb;
+                  text-transform: uppercase;
+                  letter-spacing: 1px;">Náhled dat</span>  
             <table class="table table-striped table-condensed table-bordered" >
                 <thead>
                     <tr>
                         <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                <div class="input-group">
-                    <input class="form-control input-sm" placeholder="Search"  on-enter-blur on-blur-change="search(f)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
-                    <div class="input-group-btn">
-                        <button class="btn btn-default btn-sm"  ng-click="search(f)" type="submit"><i class="glyphicon glyphicon-search "></i></button>
-                    </div>
-                </div>
-                </th>
-                </tr> 
+                            {{f.name}}</th>
+                    </tr>
                 </thead>
 
-                <tr ng-repeat="row in dataSourceRows" >
+                <tr ng-repeat="row in DataSource.dataStructure.previewRows" >
                     <td ng-repeat="field in row.dataSourceFields" >
                         {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
                     </td>
