--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -72,7 +72,7 @@
                               text-transform: uppercase;
                               letter-spacing: 1px;">Sloupce</span>    
 
-                        <table class="table" style="width: 50%" >
+                        <table class="table table-striped table-condensed table-bordered" style="width: 50%" >
                             <thead>
                                 <tr>
                                     <th class="col-lg-6">Název</th>
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <div class="row  col-lg-12" style="margin-top: 1em;">
+        <div class="row  col-lg-12" style="margin-top: 1em; overflow: auto">
             <span style="
                   font-size: 12px;
                   font-weight: 700;
