--- a/src/main/webapp/WEB-INF/ui/views/campain/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/list.html
@@ -9,11 +9,11 @@
         <div  >
             <table  class="table table-striped table-condensed"  >
                 <thead>
-                                        <tr>
+                    <tr>
                         <th><div class="input-group input-group-sm">
-                    <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search()"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
+                    <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f.searchString)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
                     <div class="input-group-btn">
-                        <button class="btn btn-default btn-xs"  ng-click="search()" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default btn-xs"  ng-click="search(f.searchString)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
                 </th>
@@ -22,12 +22,12 @@
                 <th></th>
                 <th class="text-right"><a class="btn btn-primary btn-xs pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a></th>
                 </tr>
-                    <tr>
-                        <th class="col-lg-4 text-info">Název</th>
-                        <th class="text-right col-lg-2 text-info">Počet záznamů</th>
-                        <th class="text-center text-info">Stav</th>
-                        <th class="text-right text-info">Akce</th>
-                    </tr>
+                <tr>
+                    <th class="col-lg-4 text-info">Název</th>
+                    <th class="text-right col-lg-2 text-info">Počet záznamů</th>
+                    <th class="text-center text-info">Stav</th>
+                    <th class="text-right text-info">Akce</th>
+                </tr>
 
                 </thead>
                 <tfoot>
