--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -155,10 +155,18 @@
 
                                 <button class="btn btn-primary btn-xs" ng-click="removeAttachment(a)">Odebrat</button>
 
-                                <button class="btn btn-warning btn-xs" ng-click="showAttachment(a)">Náhled</button>
+                                <button class="btn btn-warning btn-xs" ng-click="attachmentPreview(a)">Náhled</button>
                             </td>
+
                         </tr>
+                        <tr>
+                            <td colspan="4">
+                                <embed  embed-src="{{a.preview}}"  src="{{a.preview}}"  type="application/pdf"   height="400px"  width="600px;"/> 
+                  
+                            </td>
+                        </tr> 
                     </tbody>
+
                 </table>
 
 
@@ -166,23 +174,19 @@
 
 
 
+        </form>
+
+
+        <div class="row " >
+            <div class="col-lg-12 text-right">
+                <button class="btn btn-success" ng-click="sent()">Odeslat</button>
+                <button class="btn btn-primary" ng-click="ok()">OK</button>
+                <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
             </div>
+        </div>
+
+
     </div>
-
-
-</form>
-
-
-<div class="row " >
-    <div class="col-lg-12 text-right">
-        <button class="btn btn-success" ng-click="sent()">Odeslat</button>
-        <button class="btn btn-primary" ng-click="ok()">OK</button>
-        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-    </div>
-</div>
-
-
-</div>
 </div>
 
 
