--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -1,10 +1,22 @@
-
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        <div class="glyphicon glyphicon-send glyphicon-sm" style="float: left; margin-right: 1em;padding: 2px 0;"></div>
-        <h3 class="panel-title">Email: {{Campain.campainName}}</h3>
+<div class="row>" >
+           <ol class="breadcrumb">
+              <li><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+              <li class="active"><i class="fa fa-table"></i> Tables</li>
+            </ol>
     </div>
-    <div class="panel-body">
+
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Email: {{Campain.campainName}}</h1>
+    </div>
+    <!-- /.col-lg-12 -->
+
+</div>
+<!-- /.row -->
+
+<div  class="row">
+
+
 
         <form  class="form-horizontal" ng-submit="save()" name="form"   >
 
@@ -179,8 +191,8 @@
 
         <div class="row " >
             <div class="col-lg-12 text-right">
-                <button class="btn btn-success" ng-click="sent()">Odeslat</button>
-                <button class="btn btn-primary" ng-click="ok()">OK</button>
+                <button class="btn btn-success" ng-click="sent()">Uložit a odeslat</button>
+                <button class="btn btn-primary" ng-click="ok()">Uložit</button>
                 <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
             </div>
         </div>
