--- a/src/main/webapp/WEB-INF/ui/views/campain/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/list.html
@@ -1,70 +1,69 @@
 
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        <div class=" glyphicon glyphicon-send glyphicon-sm" style="float: left; margin-right: 1em;padding: 2px 0;"></div>
-        <h3 class="panel-title">Hromadné emaily</h3>
 
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Hromadné emaily</h1>
     </div>
-    <div class="panel-body">
-        <div  >
-            <table  class="table table-striped table-condensed"  >
-                <thead>
-                    <tr>
-                        <th><div class="input-group input-group-sm">
-                    <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f.searchString)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
-                    <div class="input-group-btn">
-                        <button class="btn btn-default btn-xs"  ng-click="search(f.searchString)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-                </th>
-                <th>
-                </th>
-                <th></th>
-                <th class="text-right"><a class="btn btn-primary btn-xs pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a></th>
-                </tr>
-                <tr>
-                    <th class="col-lg-4 text-info">Název</th>
-                    <th class="text-right col-lg-2 text-info">Počet záznamů</th>
-                    <th class="text-center text-info">Stav</th>
-                    <th class="text-right text-info">Akce</th>
-                </tr>
+    <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
+<div  class="row">
 
-                </thead>
-                <tfoot>
-                    <tr><td colspan="4">
-                <pagination  page="currentPage" on-select-page="paginate(page-1)" ></pagination>
-                </td>
-                </tr>
-                </tfoot>
-                <tbody>
-                    <tr ng-repeat="c in campains" >
-                        <td  class="col-lg-4" ><b>{{c.campainName}}</b></td>
-                        <td class="text-right col-lg-2" ><span class="badge">{{c.recordsCount}}</span></td>
-                        <td class="text-center" >{{c.status}}</td>
-                        <td class="text-right col-lg-1">
-                            <div class="btn-group-xs">
-                                <button type="button" class="btn btn-xs btn-warning dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" >
-                                    <li><a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
-
-                                    <li class="divider"></li>
-                                    <li><a ng-click="openDeleteDialog(c.id, c.campainName)" >Smazat</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-
-            </table>
-
-            <div>
+    <table  class="table table-striped table-condensed"  >
+        <thead>
+            <tr>
+                <th><div class="input-group input-group-sm">
+            <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f.searchString)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
+            <div class="input-group-btn">
+                <button class="btn btn-default btn-xs"  ng-click="search(f.searchString)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
         </div>
+        </th>
+        <th>
+        </th>
+        <th></th>
+        <th class="text-right"><a class="btn btn-primary btn-xs pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a></th>
+        </tr>
+        <tr>
+            <th class="col-lg-4 text-info">Název</th>
+            <th class="text-right col-lg-2 text-info">Počet záznamů</th>
+            <th class="text-center text-info">Stav</th>
+            <th class="text-right text-info">Akce</th>
+        </tr>
 
+        </thead>
+        <tfoot>
+            <tr><td colspan="4">
+        <pagination  page="currentPage" on-select-page="paginate(page-1)" ></pagination>
+        </td>
+        </tr>
+        </tfoot>
+        <tbody>
+            <tr ng-repeat="c in campains" >
+                <td  class="col-lg-4" ><b>{{c.campainName}}</b></td>
+                <td class="text-right col-lg-2" ><span class="badge">{{c.recordsCount}}</span></td>
+                <td class="text-center" >{{c.status}}</td>
+                <td class="text-right col-lg-1">
+                    <div class="btn-group-xs">
+                        <button type="button" class="btn btn-xs btn-warning dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" >
+                            <li><a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
 
+                            <li class="divider"></li>
+                            <li><a ng-click="openDeleteDialog(c.id, c.campainName)" >Smazat</a></li>
+                        </ul>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+
+    </table>
+
+    <div>
     </div>
 </div>
+
 
 
 
