--- a/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
@@ -1,10 +1,14 @@
-<div class="panel panel-default panel-primary">
-    <div class="panel-heading" >
 
-        <h1 class="panel-title">Náhled datového zdroje: {{DataSource.name}}</h1>
 
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Náhled datového zdroje: {{DataSource.name}}</h1>
     </div>
-    <div class="panel-body">
+    <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
+<div  class="row">
+
 
         <div   class="col-md-4 form-horizontal">
 
@@ -70,6 +74,5 @@
             </div>
         </div>
     </div>
-</div>
 
    
