--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -1,11 +1,13 @@
 
-<div class="panel panel-primary panel-in">
-    <div class="panel-heading">
-        <h1 class="panel-title">Upravit datový zdroj: {{DataSource.name}}</h1>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Upravit datový zdroj: {{DataSource.name}}</h1>
     </div>
-    <div class="panel-body">
+    <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
+<div  class="row">
 
-        <div class="row" >
 
             <div class="col-md-12">
                 <span style="
@@ -134,5 +136,5 @@
                 <button class="btn btn-warning" ng-click="cancel()">Zrušit</button>
             </div>
         </div>
-    </div>
+
 
