--- a/src/main/webapp/WEB-INF/ui/views/campain/preview.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/preview.html
@@ -13,8 +13,11 @@
 
 </div>
 <!-- /.row -->
+<div class="row" ng-controller="EmailPreviewCtrl">
+    <div class="well" ng-bind-html="to_trusted(email.emailText)"></div>
+  
+</div>
 
-<div  class="row">
 
     <div class="row" >
         <div class="col-lg-12 text-right">
@@ -24,7 +27,7 @@
     </div>
 
 
-</div>
+
 </div>
 
 
