--- a/src/main/webapp/WEB-INF/ui/views/campain/dashboard.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/dashboard.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#campains/type/drafts">
+            <a href="#campains/type/EDIT">
                 <div class="panel-footer announcement-bottom">
                     <div class="row">
                         <div class="col-xs-6">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#campains/type/sending">
+            <a href="#campains/type/INPROGRES">
                 <div class="panel-footer announcement-bottom">
                     <div class="row">
                         <div class="col-xs-6">
