--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -158,9 +158,9 @@
                         </td>
 
                     </tr>
-                    <tr>
+                    <tr  ng-show="isCollapsed"  >
                         <td colspan="4" >
-                            <embed  collapse="isCollapsed"  embed-src="{{a.preview}}"  src="{{a.preview}}"  type="application/pdf"   style="min-height:  400px;width: 400px;"/> 
+                            <embed width="100%" collapse="isCollapsed"  embed-src="{{a.preview}}"  src="{{a.preview}}"  type="application/pdf"   style="height:  600px;"/> 
 
                         </td>
                     </tr> 
