--- a/src/main/webapp/WEB-INF/ui/views/campain/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/list.html
@@ -41,16 +41,17 @@
         <tbody>
             <tr ng-repeat="c in campains" >
                 <td  class="col-lg-4" ><b>{{c.campainName}}</b></td>
-                <td class="text-right col-lg-2" ><span class="badge">{{c.recordsCount}}</span></td>
+                <td class="text-right col-lg-2" >{{c.recordsCount}}</td>
                 <td class="text-right col-lg-1">
                     <div class="btn-group">
                         <button type="button" class="btn btn-warning dropdown-toggle dr" data-toggle="dropdown">Action <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-left" >
-                            <li><a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
-                            <li><a ng-click="send(c)"  >Odeslat</a></li>
+                            
+                            <li ng-show="{{c.status===undefined || c.status==='EDIT' }}"> <a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
+                            <li ng-show="{{c.status==='EDIT' }}"  ><a ng-click="send(c)"  >Odeslat</a></li>
                             <li class="divider"></li>
-                            <li><a ng-click="openDeleteDialog(c.id, c.campainName)" >Smazat</a></li>
+                            <li ng-show="{{c.status==='EDIT' }}"  ><a ng-click="openDeleteDialog(c.id, c.campainName)" >Smazat</a></li>
                         </ul>
                     </div>
                 </td>
