--- a/src/main/webapp/WEB-INF/ui/views/campain/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/list.html
@@ -27,7 +27,7 @@
         <tr>
             <th class="col-lg-4 text-info">Název</th>
             <th class="text-right col-lg-2 text-info">Počet záznamů</th>
-
+            <th ng-show="{{c.status === 'FINISHED'}}"  >Počet odeslaných</th>
             <th class="text-right text-info">Akce</th>
         </tr>
 
@@ -42,16 +42,17 @@
             <tr ng-repeat="c in campains" >
                 <td  class="col-lg-4" ><b>{{c.campainName}}</b></td>
                 <td class="text-right col-lg-2" >{{c.recordsCount}}</td>
+                <td class="text-right col-lg-2" ng-show="{{c.status === 'FINISHED'}}"  >{{c.recordsSent}}</td>
                 <td class="text-right col-lg-1">
                     <div class="btn-group">
                         <button type="button" class="btn btn-warning dropdown-toggle dr" data-toggle="dropdown">Action <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-left" >
-                            
-                            <li ng-show="{{c.status===undefined || c.status==='EDIT' }}"> <a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
-                            <li ng-show="{{c.status==='EDIT' }}"  ><a ng-click="send(c)"  >Odeslat</a></li>
+                            <li ng-show="{{c.status === undefined|| c.status==='EDIT' }}"> <a ng-href="#/campain/{{c.id}}"  >Zobrazit emaily</a></li>
+                            <li ng-show="{{c.status === undefined|| c.status==='EDIT' }}"> <a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
+                            <li ng-show="{{c.status === 'EDIT'}}"  ><a ng-click="send(c)"  >Odeslat</a></li>
                             <li class="divider"></li>
-                            <li ng-show="{{c.status==='EDIT' }}"  ><a ng-click="openDeleteDialog(c.id, c.campainName)" >Smazat</a></li>
+                            <li ng-show="{{c.status === 'EDIT'}}"  ><a ng-click="openDeleteDialog(c.id, c.campainName)" >Smazat</a></li>
                         </ul>
                     </div>
                 </td>
