--- a/src/main/webapp/WEB-INF/ui/views/campain/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/list.html
@@ -2,14 +2,19 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Hromadné emaily : {{ctype}}</h1>
+                <h2 style="
+            font-size: 20px;
+            font-weight: 700;
+            color: #bbb;
+            text-transform: uppercase;
+            letter-spacing: 1px;">Hromadné emaily : {{ctype}}</h2>
     </div>
     <!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
 <div  class="row">
 
-    <table  class="table table-striped table-condensed"  >
+    <table  class="table table-striped table-condensed" style="width: 80%"  >
         <thead>
             <tr>
                 <th><div class="input-group input-group">
@@ -22,12 +27,12 @@
         <th>
         </th>
         <th></th>
-        <th class="text-right"><a class="btn btn-primary  pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a></th>
+        <th class="text-right"><a class="btn btn-primary  pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový kampaň</a></th>
         </tr>
         <tr>
-            <th class="col-lg-4 text-info">Název</th>
-            <th class="text-right col-lg-2 text-info">Počet záznamů</th>
-            <th ng-show="{{c.status === 'FINISHED'}}"  >Počet odeslaných</th>
+            <th class="text-info">Název</th>
+            <th class="text-right text-info">Počet záznamů</th>
+            <th class="text-right text-info"  ng-show="{{ctype === 'FINISHED'}}"  >Počet odeslaných</th>
             <th class="text-right text-info">Akce</th>
         </tr>
 
@@ -41,18 +46,19 @@
         <tbody>
             <tr ng-repeat="c in campains" >
                 <td  class="col-lg-4" ><b>{{c.campainName}}</b></td>
-                <td class="text-right col-lg-2" >{{c.recordsCount}}</td>
-                <td class="text-right col-lg-2" ng-show="{{c.status === 'FINISHED'}}"  >{{c.recordsSent}}</td>
-                <td class="text-right col-lg-1">
+                <td class="text-right" >{{c.recordsCount}}</td>
+                <td class="text-right" ng-show="{{ctype === 'FINISHED'}}"  >{{c.recordsSent}}</td>
+                <td class="text-right">
                     <div class="btn-group">
                         <button type="button" class="btn btn-warning dropdown-toggle dr" data-toggle="dropdown">Action <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-left" >
-                            <li ng-show="{{c.status === undefined|| c.status==='EDIT' }}"> <a ng-href="#/campain/{{c.id}}"  >Zobrazit emaily</a></li>
-                            <li ng-show="{{c.status === undefined|| c.status==='EDIT' }}"> <a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
+                            <li ng-show="{{ ctype === 'FINISHED'}}"> <a ng-href="#/campain/{{c.id}}"  >Zobrazit emaily</a></li>
+                            <li ng-show="{{ ctype === 'FINISHED'}}"> <a ng-href="#/campain-stats/{{c.id}}"  >Statistiky</a></li>
+                            <li ng-show="{{ctype === 'EDIT'}}"> <a ng-href="#/campain/{{c.id}}"  >Upravit</a></li>
                             <li ng-show="{{c.status === 'EDIT'}}"  ><a ng-click="send(c)"  >Odeslat</a></li>
                             <li class="divider"></li>
-                            <li ng-show="{{c.status === 'EDIT'}}"  ><a ng-click="openDeleteDialog(c.id, c.campainName)" >Smazat</a></li>
+                            <li ng-show="{{ctype === 'EDIT'}}"  ><a ng-click="openDeleteDialog(c.id, c.campainName)" >Smazat</a></li>
                         </ul>
                     </div>
                 </td>
