--- a/src/main/webapp/WEB-INF/ui/views/datasource/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/list.html
@@ -2,7 +2,12 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Datové zdroje</h1>
+        <h2 style="
+            font-size: 20px;
+            font-weight: 700;
+            color: #bbb;
+            text-transform: uppercase;
+            letter-spacing: 1px;">Datové zdroje</h2>
     </div>
     <!-- /.col-lg-12 -->
 </div>
@@ -11,7 +16,7 @@
 
 
 
-    <table  class="table table-striped  table-bordered" >
+    <table  class="table table-striped  table-bordered" style="width: 80%;">
         <thead>
             <tr>
                 <th class="col-lg-4 text-info">Název </th>
