--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -101,8 +101,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-8">
-                    <textarea cols="60" id="rr" rows="30"  class="ckeditor" style="width: 800px;height: 300px; z-index: 100;" ng-model="Campain.emailText" >
-               
+      
+               <textarea cols="60" ck-editor style="width: 800px;height: 300px; z-index: 100;" ng-model="Campain.emailText"></textarea>
                     </textarea>
                 </div>
                 <div class="col-lg-4">
