--- a/src/main/webapp/WEB-INF/ui/views/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/ui/views/dashboard/dashboard.html
@@ -7,37 +7,40 @@
             color: #bbb;
             text-transform: uppercase;
             letter-spacing: 1px;">Datové zdroje</h2>
-            {{data || json}}
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-3">
+    
+        <div class="col-lg-3">
         <div class="panel panel-success">
+                <a href="#datasource/new">
             <div class="panel-heading">
                 <div class="row">
-                    <div class="col-xs-4">
-                        <i class="fa fa-folder-o fa-5x"></i>
+                    <div class="col-xs-2">
+                        <i class="fa fa-list-alt fa-4x"></i>
                     </div>
-                    <div class="col-xs-8 text-right">
-                        <p class="h2">Nový datový zdroj</p>
-                        <p>&nbsp;</p>
+                    <div class="col-xs-10 text-right">
+                        <h3 ></i> Nový datový zdroj</h3>
+
                     </div>
                 </div>
             </div>
-            <a href="#campain/new">
+        
                 <div class="panel-footer announcement-bottom">
                     <div class="row">
                         <div class="col-xs-6">
-                            Vytvořit datový zdroj
+                           Nový datový zdroj
                         </div>
                         <div class="col-xs-6 text-right">
-                            <i class="fa fa-arrow-circle-right"></i>
+                            <i class="fa fa-plus fa-1x"></i>
                         </div>
                     </div>
                 </div>
             </a>
         </div>
     </div>
+    
+
 </div>
 <div class="row">
     <div class="col-lg-12">
@@ -54,6 +57,7 @@
 <div  class="row">
     <div class="col-lg-3">
         <div class="panel panel-success">
+                <a href="#campain/new">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-2">
@@ -65,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#campain/new">
+        
                 <div class="panel-footer announcement-bottom">
                     <div class="row">
                         <div class="col-xs-6">
@@ -81,6 +85,7 @@
     </div>
     <div class="col-lg-3">
         <div class="panel panel-primary">
+                <a href="#campains/type/EDIT">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-2">
@@ -91,7 +96,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#campains/type/EDIT">
+        
                 <div class="panel-footer announcement-bottom">
                     <div class="row">
                         <div class="col-xs-6">
@@ -108,6 +113,7 @@
 
     <div class="col-lg-3">
         <div class="panel panel-info">
+                  <a href="#campains/type/INPROGRES">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-2">
@@ -119,7 +125,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#campains/type/INPROGRES">
+      
                 <div class="panel-footer announcement-bottom">
                     <div class="row">
                         <div class="col-xs-6">
@@ -137,6 +143,7 @@
 
     <div class="col-lg-3">
         <div class="panel panel-danger">
+                     <a href="#campains/type/FINISHED">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-2">
@@ -148,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#campains/type/FINISHED">
+   
                 <div class="panel-footer announcement-bottom">
                     <div class="row">
                         <div class="col-xs-6">
@@ -208,11 +215,11 @@
                         </div>
                     </div>
                 </div>
-                <a href="#campain/new">
+                <a href="#stats">
                     <div class="panel-footer announcement-bottom">
                         <div class="row">
                             <div class="col-xs-6">
-                                Vytvořit datový zdroj
+                               Podrobnosti
                             </div>
                             <div class="col-xs-6 text-right">
                                 <i class="fa fa-arrow-circle-right"></i>
