--- a/src/main/webapp/WEB-INF/ui/views/user/login.html
+++ b/src/main/webapp/WEB-INF/ui/views/user/login.html
@@ -1,3 +1,5 @@
+
+<div ng-show="mode">
 <div class="page-header">
 	<h2>Login</h2>
 </div>
@@ -15,7 +17,7 @@
 			<div class="form-group">
 				<label for="password" class="col-sm-3 control-label">Password:</label>
 				<div class="col-sm-9">
-					<input id="password" ng-model="password" type="password" class="form-control" />
+					<input id="password" ng-model="userpassword" type="password" class="form-control" />
 				</div>
 			</div>
 
@@ -32,3 +34,4 @@
 	</div>
 
 </div>
+    </div>
