security added user mamangement

--- a/src/main/webapp/WEB-INF/ui/css/custom.css
+++ b/src/main/webapp/WEB-INF/ui/css/custom.css
@@ -93,7 +93,7 @@ body {
 }
 
 .nav-second-level  > a {
-    padding-left: : 2em;
+    padding-left:  2em;
 
 }
 
@@ -114,6 +114,6 @@ body {
     
 }
 #page-wrapper {
-    padding-top: 35px;
+    padding-top: 5px;
     
 }
