--- a/src/main/webapp/WEB-INF/ui/views/user/login.html
+++ b/src/main/webapp/WEB-INF/ui/views/user/login.html
@@ -31,6 +31,7 @@
 	
 	<div class="col-md-6">
 		<p class="alert alert-info">Login with either user:user to read entries or with admin:admin to read and edit entries.</p>
+                <p>{{loginerror}} </p>
 	</div>
 
 </div>
