--- a/src/main/webapp/WEB-INF/ui/views/user/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/user/edit.html
@@ -1,48 +1,137 @@
-<form novalidate class="form-horizontal" ng-submit="save()" name="saveUser">
-    <div class="control-group">
-        <label class="control-label" for="url">ID</label>
-        <div class="controls">
-            <input type="url" ng-model="User.id" id="url" required/>
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label" for="username">Uživatelské jméno</label>
-        <div class="controls">
-            <input type="text" ng-model="User.username" id="username" name="username" server-error />
-            <div class="errors" ng-show="form.username.$invalid">
-                <span ng-show="form.username.$error.server">{{ errors.username}}</span>
-            </div>
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label" for="password">Heslo</label>
-        <div class="controls">
-            <input type="text" ng-model="User.password" id="password" required name="password" server-error/>
-            <div class="errors" ng-show="form.password.$invalid">
-                <span ng-show="form.password.$error.server">{{ errors.password}}</span>
-            </div>
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label" for="firstName">Jméno</label>
-        <div class="controls">
-            <input type="text" ng-model="User.firstName" id="firstName" required name="firstName" server-error />
-            <div class="errors" ng-show="form.firstName.$invalid">
-                <span ng-show="form.password.$error.server">{{ errors.firstName}}</span>
-            </div>
-        </div>
-    </div>
-    <div class="control-group">
-        <label class="control-label" for="firstName">Jméno</label>
-        <div class="controls">
-            <input type="text" ng-model="User.lastName" id="lastName" required name="lastName" server-error/>
-            <div class="errors" ng-show="form.lastName.$invalid">
-                <span ng-show="form.lastName.$error.server">{{ errors.lastName}}</span>
-            </div>
-        </div>
-    </div>
 
-    <div class="control-group">
-        <button id="save" class="btn btn-primary">Uložit</button>
-    </div>
-</form>
+<tabset>
+    <tab>
+        <tab-heading>
+            <i class="glyphicon glyphicon-envelope"></i> Informace
+        </tab-heading>
+        <form novalidate class="form-horizontal" >
+            <div class="control-group">
+                <div class="controls">
+                    <input type="hidden" ng-model="user.id" id="url"  />
+                </div>
+            </div>
+
+            <div class="control-group">
+                <label class="control-label" for="firstName">Jméno</label>
+                <div class="controls">
+                    <input type="text" ng-model="user.firstName" id="firstName" required name="firstName" server-error />
+                    <div class="errors" ng-show="form.firstName.$invalid">
+                        <span ng-show="form.password.$error.server">{{ errors.firstName}}</span>
+                    </div>
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="firstName">Příjmení</label>
+                <div class="controls">
+                    <input type="text" ng-model="user.lastName" id="lastName" required name="lastName" server-error/>
+                    <div class="errors" ng-show="form.lastName.$invalid">
+                        <span ng-show="form.lastName.$error.server">{{ errors.lastName}}</span>
+                    </div>
+                </div>
+            </div>
+
+
+        </form>
+        <div class="control-group">
+            <a id="saveUserInfo" class="btn btn-primary" ng-click="saveUser()">Uložit</a>
+        </div>
+    </tab>
+    <tab>
+        <tab-heading>
+            <i class="glyphicon glyphicon-pencil"></i> Přihlášení a oprávnění
+        </tab-heading>
+        <form novalidate class="form-horizontal"   >
+            <div class="control-group">
+                <div class="controls">
+                    <input type="hidden" ng-model="login.id" id="loginid"  />
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="username">Uživatelské jméno</label>
+                <div class="controls">
+                    <input type="text" ng-model="login.userName" id="username" name="username" server-error />
+                    <div class="errors" ng-show="form.userName.$invalid">
+                        <span ng-show="form.username.$error.server">{{ errors.username}}</span>
+                    </div>
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="password">Heslo</label>
+                <div class="controls">
+                    <input type="text" ng-model="login.password" id="password" required name="password" server-error/>
+                    <div class="errors" ng-show="form.password.$invalid">
+                        <span ng-show="form.password.$error.server">{{ errors.password}}</span>
+                    </div>
+                </div>
+            </div>
+            <div  class="row">
+                <div class="col-lg-3" >
+                    <div class="col-lg-6">
+                        <h3 style="
+                            font-size: 10px;
+                            font-weight: 700;
+                            color: #bbb;
+                            text-transform: uppercase;
+                            letter-spacing: 1px;">Dostupné role</h3>
+                    </div>
+
+                    <table  class="table table-striped table-condensed"   >
+                        <thead>
+                            <tr>
+                                <th class="text-info">Název</th>
+                                <th class="text-right text-info"></th>
+                            </tr>
+
+                        </thead>
+
+                        <tbody>
+                            <tr ng-repeat="ar in availableRoles" >
+                                <td  class="col-lg-4" ><b>{{ar.authority}}</b></td>
+                                <td class="text-right">
+                                    <button ng-disabled="ar.isDisabled" ng-click="addRole(ar)" >Přidat</button>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+
+                </div>
+                <div class="col-lg-3" >
+
+                    <h3 style="
+                        font-size: 10px;
+                        font-weight: 700;
+                        color: #bbb;
+                        text-transform: uppercase;
+                        letter-spacing: 1px;">Přidělené role</h3>
+                    <table  class="table table-striped table-condensed"   >
+                        <thead>
+
+                            <tr>
+                                <th class="text-info">Název</th>
+                                <th class="text-right text-info"></th>
+                            </tr>
+
+                        </thead>
+
+                        <tbody>
+                            <tr ng-repeat="r in login.roles"   >
+                                <td  class="col-lg-4" ><b>{{r}}</b></td>
+                                <td class="text-right">
+                                    <button  ng-click="removeRole(r)" >Odebrat</button>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+                </div>
+            </div>
+
+
+        </form>
+        <div class="control-group">
+            <a  href="#" id="saveUserLoginTriger" class="btn btn-primary" ng-click="saveLogin()" >Uložit</a>
+        </div>
+    </tab>
+</tabset>
+
