--- a/src/main/webapp/WEB-INF/ui/views/user/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/user/list.html
@@ -1,11 +1,64 @@
-<h2>
-        Uživatel <a class="btn btn-primary pull-right" href="#/users/new"><i
-                class="icon-plus-sign icon-white"></i> Nový uživatel</a>
-                List
-</h2>
-<table class="table table-striped">
-        <tr ng-repeat="User in users">
-                <td><a href="#/users/{{User.id}}">{{User.firstName}}</a></td>
-                <td>{{User.lastName}}</td>
+
+<div class="row">
+    <div class="col-lg-12">
+                <h2 style="
+            font-size: 20px;
+            font-weight: 700;
+            color: #bbb;
+            text-transform: uppercase;
+            letter-spacing: 1px;">Uživatelé</h2>
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
+<div  class="row">
+
+    <table  class="table table-striped table-condensed" style="width: 80%"  >
+        <thead>
+            <tr>
+                <th><div class="input-group input-group">
+            <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f.searchString)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
+            <div class="input-group-btn">
+                <button class="btn btn-default btn"  ng-click="search(f.searchString)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+        </div>
+        </th>
+        <th>
+        </th>
+        <th></th>
+        <th class="text-right"><a class="btn btn-primary  pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový kampaň</a></th>
         </tr>
-</table>
+        <tr>
+            <th class="text-info">Jméno</th>
+            <th class="text-right text-info">Akce</th>
+        </tr>
+
+        </thead>
+        <tfoot>
+            <tr><td colspan="4">
+        <pagination  page="currentPage" on-select-page="paginate(page-1)" ></pagination>
+        </td>
+        </tr>
+        </tfoot>
+        <tbody>
+            <tr ng-repeat="u in users" >
+                <td  class="col-lg-4" ><b>{{u.firstName}} {{u.lastName}}</b></td>
+                <td class="text-right">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-warning dropdown-toggle dr" data-toggle="dropdown">Action <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-left" >
+                            <li > <a ng-href="#/users/{{u.id}}"  >Upravit</a></li>
+                            <li class="divider"></li>
+                            <li ><a ng-click="openDeleteDialog(u.id, u.firstName)" >Smazat</a></li>
+                        </ul>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+
+    </table>
+
+    <div>
+    </div>
+</div>
