--- a/src/main/webapp/WEB-INF/ui/views/user/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/user/list.html
@@ -27,7 +27,7 @@
                 <button  style="margin-bottom: 1em;"  class="btn btn-default btn"  ng-click="search(f.searchString)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
         </div></th>
-        <th class="text-right"><a class="btn btn-primary  pull-right"ng-href="#/campain/new"><i class="icon-plus-sign icon-white"></i> Nový uživatel</a></th>
+        <th class="text-right"><a class="btn btn-primary  pull-right"ng-href="#/users/new"><i class="icon-plus-sign icon-white"></i> Nový uživatel</a></th>
         </tr>
         <tr>
             <th class="text-info">Jméno</th>
